# DjangoAuth

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  docker-compose.yaml
.github/: CODE_OF_CONDUCT.md
.github/workflows/: mdbook.yml
client/: .dockerignore  .gitignore  Dockerfile  README.md  gist.md  package-lock.json  package.json
client/.next/: trace
client/.next/cache/: config.json
client/.next/cache/webpack/client-development/: index.pack.gz.old
client/.next/cache/webpack/server-development/: index.pack.gz.old
client/.next/server/: middleware-build-manifest.js
client/app/: layout.tsx  page.tsx
client/app/activation/[uid]/[token]/: page.tsx
client/app/auth/facebook/: page.tsx
client/app/auth/google/: page.tsx
client/app/auth/login/: page.tsx
client/app/auth/register/: page.tsx
client/app/dashboard/: layout.tsx  page.tsx
client/app/password-reset/: page.tsx
client/app/password-reset/[uid]/[token]/: page.tsx
client/components/common/: Footer.tsx  List.tsx  NavLink.tsx  Navbar.tsx  SocialButton.tsx  SocialButtons.tsx  Spinner.tsx
client/components/forms/: Form.tsx  Input.tsx  LoginForm.tsx  PasswordResetConfirmForm.tsx  PasswordResetForm.tsx  RegisterForm.tsx
client/components/utils/: RequireAuth.tsx  Setup.tsx
client/hooks/: use-login.ts  use-register.ts  use-reset-password-confirm.ts  use-reset-password.ts  use-social-auth.ts  use-verify.ts
client/redux/: provider.tsx  store.ts
client/redux/features/: authApiSlice.ts
client/redux/services/: apiSlice.ts
client/utils/: continue-with-social-auth.ts  index.ts
configs/: .env.dev  .env.dev_sample
docs/: README.md
docs/django_auth_book/: book.toml
docs/django_auth_book/src/: SUMMARY.md  introduction.md
docs/learneasyapp_book/: book.toml
docs/learneasyapp_book/src/: SUMMARY.md  introduction.md
server/: Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt  rundocker_dev.sh
server/apps/users/: authentication.py  models.py  urls.py
server/apps/users/migrations/: 0001_initial.py
server/apps/users/views/: __init__.py  auth_views.py  token_views.py
server/django_auth/: settings.py  urls.py
server/learneasyapp/: asgi.py  draft_setting.py  settings.py  urls.py  wsgi.py
